# cupybara_ia2

./: README.md  gradio_script.py  pyproject.toml  train_yolo11_crops_to_frames.py  train_yolo_filtered_augmented.py
data_extraction_scripts/: megadetector_armadillo_frame_extractor.py  megadetector_bird_frame_extractor.py  megadetector_cow_frame_extractor.py  megadetector_frame_reprocessor.py  megadetector_hare_frame_extractor.py  megadetector_margay_frame_extractor.py  megadetector_noanimal_frame_extractor.py  megadetector_skunk_frame_extractor.py  megadetector_video_frame_extractor.py  megadetector_wildboar_frame_extractor.py
failed_training_scripts/: train_with_optimized_params.py  train_yolo_classification_overfitting_prevention.py  train_yolo_filtered.py  train_yolo_optuna_optimization.py
runs/classification_overfitting_prevention/exp2/: args.yaml
runs/classification_overfitting_prevention/exp3/: args.yaml  results.csv
runs/crops_to_frames/: validation_results.json  validation_summary.txt
runs/crops_to_frames/crops_training/: args.yaml  results.csv
runs/filtered_train/exp/: args.yaml
runs/filtered_train/exp10/: args.yaml  results.csv
runs/filtered_train/exp2/: args.yaml
runs/filtered_train/exp3/: args.yaml
runs/filtered_train/exp4/: args.yaml
runs/filtered_train/exp5/: args.yaml
runs/filtered_train/exp6/: args.yaml
runs/filtered_train/exp7/: args.yaml
runs/filtered_train/exp8/: args.yaml  results.csv
runs/filtered_train/exp9/: args.yaml  results.csv
runs/filtered_train_augmented/exp/: args.yaml  results.csv
(+32 files in other folders)
